# query-builder

./: .gitignore  README.md  query-builder.cabal
app/: Main.hs
src/: QueryBuilder.hs
src/QueryBuilder/: Demo.hs  ExpressionContainer.hs  GadtParser.hs  GadtTypes.hs  Parser.hs  Types.hs
src/QueryBuilder/Parser/: Internal.hs
test/QueryBuilder/: ExpressionContainerSpec.hs  ParserSpec.hs  TypesSpec.hs
