name:                query-builder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/joshuaclayton/query-builder#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QueryBuilder
  other-modules:       QueryBuilder.Parser.Internal
                     , QueryBuilder.Demo
                     , QueryBuilder.Types
                     , QueryBuilder.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5 && < 6
                     , text
                     , scientific
                     , lens
                     , mtl
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable query-builder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , query-builder
  default-language:    Haskell2010

test-suite query-builder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , query-builder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/query-builder
